--- a/Day2_MusicPlayer/player_frontend/src/App.css
+++ b/Day2_MusicPlayer/player_frontend/src/App.css
@@ -21,6 +21,12 @@ button{
   padding:4px;
   cursor: pointer;
 }
+button:hover{
+  opacity: 0.9;
+}
+button:active{
+  opacity: 0.7;
+}
 input{
   padding:8px;
   border:none;
