--- a/Day2_MusicPlayer/player_frontend/src/components/PlayerPage/style.css
+++ b/Day2_MusicPlayer/player_frontend/src/components/PlayerPage/style.css
@@ -14,6 +14,8 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    background-color:lightsalmon ;
+    box-shadow: 0px 0px 10px lightsalmon;
 }
 
 .thumbnail{
@@ -52,11 +54,11 @@
 /* progress bar */
 .progress_bar{
     position: absolute;
-    width: 14em;
-    height: 14em;
+    width: 14.2em;
+    height: 14.2em;
     border-radius: 50%;
-    top:9.8em;
-    background:conic-gradient(red 2%, lightgrey 0 );
+    top:9.7em;
+    background:conic-gradient(red 90%, lightgrey 0 );
 }
 .progress_bar progress{
     visibility:hidden;
